--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Search Juice</title>
+  <title>Phone Finder</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,9 +11,27 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+  <!-- text and search bar  -->
+  <div class="row mx-auto mt-4">
+    <div class="col-md-2"></div>
+    <div class="col-md-8 p-4 rounded shadow">
+      <h2 class=" text-primary text-center">Find Your Phone </h2>
+      <div class="input-group mb-3 mt-4">
+        <input type="text" class="form-control" placeholder="Find Your Phone" aria-label="Recipient's username"
+          aria-describedby="button-addon2" id="search-input">
+        <button class="btn btn-outline-primary" type="button" id="button-addon2"
+          onclick="searchButton()">Search</button>
+      </div>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+
+
 
 
   <!-- Bootstrap JavaScript Libraries -->
