phones load on web display

--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
   </div>
 
 
+  <div class="container">
+    <!-- div for details  -->
+    <div class="row mt-5" id="detail-display"></div>
 
+
+    <!-- div for drinks  -->
+    <div class="row mt-5" id="main-div"></div>
+
+  </div>
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
