--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="row mt-5" id="detail-display"></div>
 
 
-    <!-- div for drinks  -->
+    <!-- div for Phones  -->
     <div class="row mt-5" id="main-div"></div>
 
   </div>
